# zep

./: CMakeLists.txt  LICENSE  README.md  meson.build
src/: CMakeLists.txt  meson.build  zep.cc  zep.hpp
tests/: .gitignore  basic_init.cc  iter.cc  malformed_input.cc  meson.build  stripped.cc  testing.cc
tests/files/: has_relocs.c  hello-world  hello-world.c  malformed_offset_outofbounds  malformed_preserved_header  stripped
tests/scripts/: check.sh
